# metasurface-paper-RAG

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.yml  pyproject.toml  start.cmd
.github/workflows/: image-audit.yml  quality.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_phase2_chunks_and_formulas.py  0003_phase3_answer_audit.py  0004_phase35_job_stages.py  0005_phase4_quality_and_recovery.py  0006_domain_governance.py  0007_document_genre_and_rewrite_audit.py  0008_semantic_claim_audit.py  0009_answer_actions.py  0010_document_genre_v2.py  0011_conversations.py  0012_paper_profiles.py  0013_conversation_semantic_memory.py  0014_formula_layout_v3.py  0015_formula_jobs.py  0016_formula_parser_default.py  0017_formula_index_status.py  0018_formula_dependencies.py  0019_verified_formula_latex.py  0020_filename_search_key.py  0021_domain_positive_admission.py
scripts/: audit_formula_library.py  backfill_document_genres.py  backfill_formulas.py  bootstrap_model.py  load_ingest.py  migrate_and_verify.py  phase35_acceptance.py  rebuild_vector_index.py  reclassify_document_genres.py  release_audit.py  run_evals.py  start_services.ps1  start_services.sh  stop_services.ps1  stop_services.sh  verify_batch_upload_ui.py  verify_domain_admission_ui.py  verify_filename_search_ui.py  verify_formula_ui.py
src/paper_rag/: config.py  db.py  embedding_server.py  main.py  worker.py
tests/fixtures/: sample_paper.py
tests/unit/: conftest.py  (+71 more)
(+77 files in other folders)
